[tool.poetry]
name = "vmigration-helper"
version = "0.1.1"
homepage = "https://github.com/bluedenim/vmigration-helper"
description = "Van's Django Migration Helper"
authors = ["bluedenim <vancly@hotmail.com>"]
readme = "README.md"
packages = [
    { include = "vmigration_helper" },
]
exclude = ["main"]
keywords = ["django","migration","rollback"]

[tool.poetry.dependencies]
python = ">=3.6,<4.0"
Django = "^3.2.6"

[tool.poetry.dev-dependencies]
twine = "^3.4.1"
wheel = "^0.36.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
