[tool.poetry]
name = "vmigration-helper"
version = "0.3.0"
homepage = "https://github.com/bluedenim/vmigration-helper"
description = "Van's Django Migration Helper"
authors = ["bluedenim <vancly@hotmail.com>"]
readme = "README.md"
packages = [
    { include = "vmigration_helper" },
]
exclude = ["main"]
keywords = ["django","migration","rollback"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Django = ">=1.11.17,<5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
