[project]
name = "vmigration-helper"
version = "1.2.0.dev0"
authors = [
  {name = "Van Ly", email = "vancly@hotmail.com"},
]
description = "Van's Django Migration Helper"
keywords = ["django", "db", "migration"]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "django~=4.2",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[project.urls]
Homepage = "https://www.therealvan.com"
Repository = "https://github.com/bluedenim/vmigration-helper"

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[tool.uv.build-backend]
module-name = "vmigration_helper"
module-root = ""
source-exclude = ["tests.py", "tests"]
wheel-exclude = ["tests.py", "tests"]
